<resources>
    <string name="app_name">ReDDonor</string>
    <string name="title_activity_login">LoginActivity</string>>
    <string name="google_maps_key">AIzaSyAeTEB1vcCKs99N0xzN0Za7ygGJxra-fzI</string>
    <string name="str_PlaceAPI_Key">AIzaSyDme3UZgcEZ_t_fo1wqLtcL6uWhmIWq8Wo</string>
    <string name="str_dialogTitle">How Would You \nRate Our App Experience?</string>
    <string name="strTermsURL">http://reddonor.info/termsnConditions.html</string>
    <string name="strTermsTitle">Terms &amp; Conditions</string>
    <string name="str_Continue">Continue</string>
    <string name="str_nothanks">No Thanks!</string>
    <string name="str_login">Log In</string>
    <string name="str_signup">Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_Mobile">Mobile No</string>
    <string name="str_Mobilenumber">Mobile Number</string>
    <string name="prompt_Email">Email</string>
    <string name="prompt_City">City</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Comfirm Password</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="str_forgotPass_descr">Please write your email to receive a temporary password.</string>
    <string name="action_sign_in">Already have an account? Log In</string>
    <string name="str_sign_uptocontinue">Sign up to continue</string>
    <string name="str_sign_intocontinue">Sign in to continue</string>
    <string name="str_welcome">"Hi!\nWelcome Back"</string>
    <string name="str_signup_welcome">"Hello!\nCreate an account"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="str_newUser">New User? Sign Up</string>
    <string name="str_terms">I agree to Terms and Conditions.</string>
    <string name="str_Chat">Message</string>
    <string name="str_Rate">Rate</string>
    <string name="str_Report">Report</string>
    <string name="str_Search">Search</string>
    <string name="str_Shareapp">Share App</string>
    <string name="str_Rateapp">Rate App</string>
    <string name="str_Moreapp">More Apps</string>
    <string name="str_PrivacyPolicy">Privacy Policy</string>
    <string name="str_Logout">Log out</string>
    <string name="str_EditProfile">Edit Profile</string>
    <string name="str_InviteFriends">Invite Friends</string>
    <string name="str_Termsnconditions">Terms &amp; Conditions</string>
    <string name="str_Bloodgroup">Blood Group</string>
    <string name="str_Minage">Min Age</string>
    <string name="str_Maxage">Max Age</string>
    <string name="str_DistancefromCurrentlocation">Distance(From current location to KM)</string>
    <string name="str_filter">Filter</string>
    <string name="str_Age">Age</string>
    <string name="str_bloodgroup">Blood Group</string>
    <string name="str_Address">Address</string>
    <string name="str_Profile">Profile</string>
    <string name="str_writeyourreview">Write your review:</string>
    <string name="str_Howwasyoue_exp">How was your appointment experience with</string>
    <string name="str_YourExperience">Type your experience</string>
    <string name="str_headline">Headline for your review</string>
    <string name="str_Submit">Submit</string>
    <string name="str_WriteaReview">Write a Review</string>
    <string name="str_agreetems">Please agree to terms and conditions.</string>
    <string name="str_passwordnotmatch">Password Does not Match</string>
    <string name="str_enterPass">Please enter password</string>
    <string name="str_entervalidPass">should contain at least one digit</string>
    <string name="str_entervalidPass1">should contain at least one special char</string>
    <string name="str_entervalidPass2">should contain at least one upper case</string>
    <string name="str_entervalidPass3">should contain at least 8 characters</string>
    <string name="str_enterConfPass">Please enter confirm password</string>
    <string name="str_entrCity">Please enter city</string>
    <string name="str_validemail">please Enter a valid email</string>
    <string name="str_enterEmail">Please enter email address</string>
    <string name="str_enterMobile">Please enter mobile number</string>
    <string name="str_enterValidMobile">Please enter valid 10 digit phone number</string>
    <string name="str_entername">Please enter your name</string>
    <string name="str_confirmEmail">Confirm Mail</string>
    <string name="str_verifyEmail">Verify your email</string>
    <string name="str_verifyEmaildescr">We sent OTP code to your email</string>
    <string name="str_enterYourCode">Enter your code</string>
    <string name="str_resendCode">Resend Code</string>
    <string name="str_verify">Verify</string>
    <string name="str_enterotp">Please enter OTP</string>
    <string name="str_signupComplete">signupComplete</string>
    <string name="str_OtpValidated">OTPValidated</string>
    <string name="str_OtpNotValidated">OTPNotValidated</string>
    <string name="str_LoginCompleted">LoginCompleted</string>
    <string name="str_Edit">Edit</string>
    <string name="str_Save">Save</string>
    <string name="str_shareyourExperiance">Please share your experiance</string>
    <string name="str_shareheadline">Please add your headline</string>
    <string name="str_reporttitle">Rating &amp; Reviews</string>
    <string name="str_msgSendSuccess">Please Enter message</string>
    <string name="str_ApplyFilter">Apply Filter</string>
    <string name="str_FilterValidation">Please select filter like : BloodGroup, Minimum Age, Maximum Age, Distance.</string>
    <string name="str_VerifyEmailText"> is your email.</string>
    <string name="str_selectBloodGroup">Select Your Blood Group</string>
    <string name="str_selectBloodGroupError">Please select your blood group</string>
    <string name="str_selectgendererror">Please select gender</string>
    <string name="str_selectdateofbirth">Please select Date of birth</string>
    <string name="prompt_Dateofbirth">Date of birth</string>
    <string name="str_enteraddress">Please enter address</string>
    <string name="str_enteraddressValid">Please enter valid address</string>
    <string name="str_title">Title</string>
    <string name="str_Description">Description</string>
    <string name="str_Send">Send</string>
    <string name="str_Cancel">Cancel</string>
    <string name="str_errortitle">Please enter title</string>
    <string name="str_errorDescription">Please enter Description</string>
    <string name="str_changepassword">Change Password</string>
    <string name="str_oldpassword">Old Password</string>
    <string name="str_newpassword">New Password</string>
    <string name="str_enterOldPass">Please enter old password</string>
    <string name="str_enterNewPass">Please enter new password</string>
    <string name="str_ifanaccount">If an account with </string>
    <string name="str_existsyoushould"> exists you should receive a link to reset your password.</string>
    <string name="str_pleaseCheckYourMail">Please check your email.</string>
    <string name="str_emailDialogDescription">If you don\'t see your email within 5 minutes, please check your spam folder.</string>
</resources>