<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgback"
            android:layout_width="@dimen/size_25dp"
            android:layout_height="@dimen/size_25dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginLeft="@dimen/size_20dp"
            app:tint="@color/colorbottomtext" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/size_25dp"
        android:paddingBottom="@dimen/size_100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_welcome"
            android:textSize="@dimen/text_size_35sp"
            android:textColor="@color/colortext"
            android:fontFamily="@font/proxima_nova_bold"
            android:layout_marginTop="@dimen/size_40dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_sign_intocontinue"
            android:textSize="@dimen/text_size_15sp"
            android:textColor="@color/colortexthint"
            android:layout_marginTop="@dimen/size_5dp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40dp"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_Email"
                android:maxLength="12"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colortext"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/txtforgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Forgot_password"
            android:textSize="@dimen/text_size_15sp"
            android:textColor="@color/colorPrimary"
            android:gravity="right"
            android:layout_marginTop="@dimen/size_10dp">
        </TextView>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:text="@string/str_login"
            android:textSize="@dimen/text_size_20sp"
            android:layout_marginTop="@dimen/size_50dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/proxima_nova_bold"
            android:background="@drawable/round_corner_button">
        </Button>
    </LinearLayout>
        <TextView
            android:id="@+id/txtnewuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_newUser"
            android:textSize="@dimen/text_size_20sp"
            android:gravity="center"
            android:fontFamily="@font/proximanovacond_regular"
            android:layout_alignParentBottom="true">
        </TextView>
    </RelativeLayout>
</ScrollView>