<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgback"
            android:layout_width="@dimen/size_25dp"
            android:layout_height="@dimen/size_25dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginLeft="@dimen/size_20dp"
            app:tint="@color/colorbottomtext" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/size_25dp"
        android:paddingBottom="@dimen/size_100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_signup_welcome"
            android:textSize="@dimen/text_size_35sp"
            android:textColor="@color/colortext"
            android:fontFamily="@font/proxima_nova_bold"
            android:layout_marginTop="@dimen/size_40dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_sign_uptocontinue"
            android:textSize="@dimen/text_size_15sp"
            android:textColor="@color/colortexthint"
            android:layout_marginTop="@dimen/size_5dp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_35dp"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_name"
                android:inputType="textCapWords"
                android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_35dp"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/edtmobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="12"
                android:hint="@string/prompt_Mobile"
                android:inputType="number"
                android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_35dp"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_Email"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_35dp"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/edtcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_City"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_35dp"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colortext"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_35dp"
            app:hintTextAppearance="@style/MyHintStyle">

            <EditText
                android:id="@+id/edtconfpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colortext"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/size_25dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_agree"
                android:layout_width="@dimen/size_25dp"
                android:layout_height="@dimen/size_25dp"
                android:theme="@style/MyCheckBox"
                android:layout_gravity="center_vertical">
            </CheckBox>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_terms"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/colorbottomtext"
                android:fontFamily="@font/proximanovacond_semibold"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/size_10dp">

            </TextView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_Signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:text="@string/str_signup"
            android:textSize="@dimen/text_size_20sp"
            android:layout_marginTop="@dimen/size_25dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/proxima_nova_bold"
            android:background="@drawable/round_corner_button">
        </Button>
    </LinearLayout>
        <TextView
            android:id="@+id/txtnewuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textSize="@dimen/text_size_20sp"
            android:gravity="center"
            android:fontFamily="@font/proximanovacond_regular"
            android:layout_marginBottom="@dimen/size_20dp"
            android:layout_alignParentBottom="true">
        </TextView>
    </RelativeLayout>
</ScrollView>