<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:background="@color/colorfilterbackground">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_dialogTitle"
        android:textSize="@dimen/text_size_20sp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:fontFamily="@font/proxima_nova_bold"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_gravity="center">
    </TextView>

    <RatingBar
        android:id="@+id/ratbar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_40dp"
        android:numStars="5"
        android:layout_gravity="center"
        android:stepSize="0.5"
        android:rating="5"
        android:layout_marginTop="@dimen/size_30dp"
        android:progressTint="@color/color_rating">
    </RatingBar>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginRight="@dimen/size_15dp"
        android:layout_marginBottom="@dimen/size_20dp"
        android:text="@string/str_Continue"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/proxima_nova_bold"
        android:background="@color/colorPrimary">
    </Button>

    <TextView
        android:id="@+id/txt_nothanks"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginRight="@dimen/size_15dp"
        android:layout_marginBottom="@dimen/size_20dp"
        android:text="@string/str_nothanks"
        android:textColor="@color/colortext"
        android:fontFamily="@font/proxima_nova_bold"
        android:textSize="@dimen/text_size_20sp"
        android:textAllCaps="false"
        android:gravity="center"
        android:background="@color/colortrasnparent">
    </TextView>
</LinearLayout>
