<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgback"
            android:layout_width="@dimen/size_25dp"
            android:layout_height="@dimen/size_25dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginLeft="@dimen/size_20dp"
            app:tint="@color/colorbottomtext" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/size_25dp"
        android:paddingBottom="@dimen/size_100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_verifyEmail"
            android:textSize="@dimen/text_size_35sp"
            android:textColor="@color/colortext"
            android:fontFamily="@font/proxima_nova_bold"
            android:layout_marginTop="@dimen/size_40dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_verifyEmaildescr"
            android:textSize="@dimen/text_size_15sp"
            android:lineSpacingMultiplier="1.25"
            android:textColor="@color/colortexthint"
            android:layout_marginTop="@dimen/size_5dp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_100dp"
            app:hintTextAppearance="@style/MyHintStyle">
        <EditText
            android:id="@+id/edtotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_enterYourCode"
            android:maxLength="6"
            android:inputType="numberDecimal"
            android:theme="@style/MyEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="mrv@solutions.com is not your email?"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/colorbottomtext"
            android:gravity="center"
            android:layout_marginTop="@dimen/size_20dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_changeithere"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/colortext"
            android:gravity="center"
            android:layout_marginTop="@dimen/size_20dp">
        </TextView>
        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:text="@string/str_verify"
            android:textSize="@dimen/text_size_20sp"
            android:layout_marginTop="@dimen/size_80dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/proxima_nova_bold"
            android:background="@drawable/round_corner_button">
        </Button>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>