<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Colorsearchbackground"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rlEditProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/proximanovacond_regular"
            android:text="@string/str_EditProfile"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/size_30dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_15dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_linecolor"/>
    <RelativeLayout
        android:id="@+id/rlRateApp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/proximanovacond_regular"
            android:text="@string/str_Rateapp"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/size_30dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_15dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_linecolor"/>
    <RelativeLayout
        android:id="@+id/rlInviteFriend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/proximanovacond_regular"
            android:text="@string/str_InviteFriends"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/size_30dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_15dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/color_linecolor"/>
    <RelativeLayout
        android:id="@+id/rlTermsandCondition"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/proximanovacond_regular"
            android:text="@string/str_Termsnconditions"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/size_30dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_15dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_linecolor"/>
    <RelativeLayout
        android:id="@+id/rlPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/proximanovacond_regular"
            android:text="@string/str_PrivacyPolicy"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/size_30dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_15dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_linecolor"/>
    <RelativeLayout
        android:id="@+id/rlMoreapp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/proximanovacond_regular"
            android:text="@string/str_Moreapp"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/size_30dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_15dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/txtLogout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18sp"
        android:layout_marginTop="@dimen/size_25dp"
        android:paddingLeft="@dimen/size_30dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:background="@color/colorWhite"
        android:text="@string/str_Logout"
        android:gravity="left|center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>